samples/_failures_safe/1761732122_81f19d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0997961.c: In function ‘main’:
./samples/SAFE/__tmp_d0997961.c:148:16: error: missing terminating " character
  148 |         printf("3. Transpose
      |                ^~~~~~~~~~~~~
./samples/SAFE/__tmp_d0997961.c:148:9: error: expected expression at end of input
  148 |         printf("3. Transpose
      |         ^~~~~~
./samples/SAFE/__tmp_d0997961.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d0997961.c:148:9: error: expected declaration or statement at end of input
